Add sample Django project

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+matrix:
+  include:
+    - language: python
+      python: 3.7
+      before_script:
+        - cd APIGateway
+      install:
+        - python -m pip install --upgrade pip
+        - pip install -r requirements.txt
+      script:
+        - python APIGateway/test.py
+
 
 notifications:
   email: false
