--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ matrix:
   include:
     - language: python
       python: 3.6
-      before_script:
-        - cd APIGateway
       install:
         - python -m pip install --upgrade pip
-        - pip install -r requirements.txt
+        - pip install -r APIGateway/requirements.txt
       script:
-        - python APIGateway/test.py
+        - python APIGateway/APIGateway/test.py
 
 
 
