--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "styleguide:build": "vue-styleguidist build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.5",
