--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
   - "3.6"
 install:
   - python -m pip install --upgrade pip
-  - pip install -r requirements.txt
+  - pip install -r Sensor/requirements.txt
 # command to run tests
 script: 
-  - python folder_name/test_file_name.py
+  - python Sensor/test/tests.py
 
 
 notifications:
