--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/vegjsokh
-spring.datasource.username=vegjsokh
-spring.datasource.password=Zp9wCQA_wU5YNeR4LoGfF4N5903IzkC1
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/snpbibhg
+spring.datasource.username=snpbibhg
+spring.datasource.password=UVnMOFHZagzIBbl6ycGBxAAIDHpPRDfo
 
 
 spring.datasource.initialization-mode=always
