--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/snpbibhg
-spring.datasource.username=snpbibhg
-spring.datasource.password=UVnMOFHZagzIBbl6ycGBxAAIDHpPRDfo
+
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/gspdqqfw
+spring.datasource.username=gspdqqfw
+spring.datasource.password=UuhpK-l_1OcsROonjavXSpfXvJTkKP5_
+
 
 
 spring.datasource.initialization-mode=always
