--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
+    "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.0"
   },
@@ -28,7 +29,7 @@
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5",
-    "webpack": "^4.29.6"
+    "webpack": "^4.31.0"
   },
   "eslintConfig": {
     "root": true,
