--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.datasource.continue-on-error=true
 #Global
 MONITORID=v1
 
-API_GATEWAY_URL=http://127.0.0.1:8000/monitors
+API_GATEWAY_URL=http://127.0.0.1:8000/v1/monitors
 API_ENDPOINT=http://localhost:8080/
