--- a/APIGateway/makefile
+++ b/APIGateway/makefile
@@ -1,4 +1,7 @@
 run:
 	pip install -r requirements.txt
+	rm db.sqlite3
+	python manage.py makemigrations
+	python manage.py migrate
 	python manage.py runserver 
 	
