--- a/.gitignore
+++ b/.gitignore
@@ -607,3 +607,5 @@ hs_err_pid*
 # BeatPulse healthcheck temp database
 
 # End of https://www.gitignore.io/api/java,csharp,intellij+all,visualstudio
+
+.vscode/
