Repair from/to query

--- a/Monitor/src/main/resources/application_LOCAL_8946.properties
+++ b/Monitor/src/main/resources/application_LOCAL_8946.properties
@@ -2,10 +2,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/gspdqqfw
-spring.datasource.username=gspdqqfw
-spring.datasource.password=UuhpK-l_1OcsROonjavXSpfXvJTkKP5_
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/snpbibhg
+spring.datasource.username=snpbibhg
+spring.datasource.password=UVnMOFHZagzIBbl6ycGBxAAIDHpPRDfo
 
 
 spring.datasource.initialization-mode=always
@@ -16,9 +15,3 @@ spring.datasource.continue-on-error=true
 
 #Global
 MONITORID=v1
-
-API_VERSION=v1
-
-API_GATEWAY_URL=http://127.0.0.1:8000/v1/monitors
-
-API_ENDPOINT=http://localhost:8080/
