--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "jest-cli": "^24.8.0",
     "jest-dom": "^3.3.0",
+    "sinon": "^7.3.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
