--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "apexcharts": "^3.7.0",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "vue": "^2.6.6",
+    "vue-apexcharts": "^1.3.5",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.2",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
