--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-VUE_APP_API_BASE_URL = 'http://127.0.0.1:8081/v1'
+
+VUE_APP_API_BASE_URL = 'http://127.0.0.1:8081'
 VUE_APP_AUTH_BASE_URL = 'http://127.0.0.1:5000'
