--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.3.5",
     "vue-chartjs": "^3.4.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
