--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 
-VUE_APP_API_BASE_URL = 'http://127.0.0.1:8081'
+VUE_APP_API_BASE_URL = 'http://ec2-18-221-159-205.us-east-2.compute.amazonaws.com:8081'
 VUE_APP_AUTH_BASE_URL = 'http://127.0.0.1:5000'
