--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.0.2",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "laravel-mix": "^1.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
