--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/pimzarig
-spring.datasource.username=pimzarig
-spring.datasource.password=G25-WhwJTlFtq7r11Ddwmvp9yFsUgmTM
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/snpbibhg
+spring.datasource.username=snpbibhg
+spring.datasource.password=UVnMOFHZagzIBbl6ycGBxAAIDHpPRDfo
 
 
 
