--- a/Monitor/Dockerfile
+++ b/Monitor/Dockerfile
@@ -2,8 +2,12 @@ FROM openjdk:8-jre-slim
 
 WORKDIR /app
 
-COPY ./target/monitor-0.0.1-SNAPSHOT.jar /app
+COPY . /app
+
+RUN apt update && apt install -y maven && apt install -y openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
+RUN mvn clean
+RUN mvn install
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "monitor-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "target/monitor-0.0.1-SNAPSHOT.jar"]
