--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ matrix:
         - pip install -r APIGateway/requirements.txt
       script:
         - python APIGateway/gateway/tests.py
+      stage: build
+      script:
+        - docker build --tag=gateway:km3 APIGateway/
 
     - stage: test
       language: java
