travis dist xenial in js project

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ matrix:
 
     - stage: test
       language: node_js
+      dist: xenial
       before_install:
         - cd client
       install:
