--- a/Monitor/Dockerfile
+++ b/Monitor/Dockerfile
@@ -4,7 +4,11 @@ WORKDIR /app
 
 COPY . /app
 
-RUN apt update && apt install -y maven && apt install -y openjdk-8-jdk && rm -rf /var/lib/apt/lists/*
+RUN apt-get update
+RUN apt-get install -y maven 
+RUN apt-get install -y openjdk-8-jdk 
+
+
 RUN mvn clean
 RUN mvn install
 
