--- a/Monitor/Dockerfile
+++ b/Monitor/Dockerfile
@@ -1,12 +1,13 @@
-FROM openjdk:8-jre-slim
+FROM openjdk:8-jdk
 
 WORKDIR /app
 
 COPY . /app
 
 RUN apt-get update
+# RUN apt-get install -y openjdk-8-jdk 
 RUN apt-get install -y maven 
-RUN apt-get install -y openjdk-8-jdk 
+
 
 
 RUN mvn clean
