--- a/.travis.yml
+++ b/.travis.yml
@@ -52,15 +52,21 @@ matrix:
     - stage: build
       dist: xenial
       language: python
+      install:
+        - python -m pip install --upgrade pip
+        - pip install -r tests/requirements.txt
       script:
-        - docker build --tag=gateway:km3 APIGateway/
-        - docker build --tag=monitor:km3 Monitor/
-        - docker build --tag=sensor:km3 Sensor/
-        - docker build --tag=client:km3 client/
+        - docker build --tag=pz-gr2:gateway-km3 APIGateway/
+        - docker build --tag=pz-gr2:monitor-km3 Monitor/
+        - docker build --tag=pz-gr2:sensor-km3 Sensor/
+        - docker build --tag=pz-gr2:client-km3 client/
       after_success:
-        - docker run -d --network host -it gateway:km3
-        - docker run -d --network host -it monitor:km3
-        - docker run -d --network host -it sensor:km3
+        - docker run -d --network host -it pz-gr2:gateway-km3
+        - docker run -d --network host -it pz-gr2:monitor-km3
+        - docker run -d --network host -it pz-gr2:sensor-km3
+        - docker images
+      before_deployment:
+        - python tests/tests.py
 
 
 
