--- a/.travis.yml
+++ b/.travis.yml
@@ -55,19 +55,28 @@ matrix:
       install:
         - python -m pip install --upgrade pip
         - pip install -r tests/requirements.txt
+        - export DOCKER_USER="user"
+        - export DOCKER_PASS="pass"
       script:
-        - docker build --tag=pz-gr2:gateway-km3 APIGateway/
-        - docker build --tag=pz-gr2:monitor-km3 Monitor/
-        - docker build --tag=pz-gr2:sensor-km3 Sensor/
-        - docker build --tag=pz-gr2:client-km3 client/
-      after_success:
-        - docker run -d --network host -it pz-gr2:gateway-km3
-        - docker run -d --network host -it pz-gr2:monitor-km3
-        - docker run -d --network host -it pz-gr2:sensor-km3
+        - docker build --tag=$DOCKER_USER/pz-gr2:gateway-km3 APIGateway/
+        - docker build --tag=$DOCKER_USER/pz-gr2:monitor-km3 Monitor/
+        - docker build --tag=$DOCKER_USER/pz-gr2:sensor-km3 Sensor/
+        - docker build --tag=$DOCKER_USER/pz-gr2:client-km3 client/
+        - docker run -d --network host -it $DOCKER_USER/pz-gr2:gateway-km3
+        - docker run -d --network host -it $DOCKER_USER/pz-gr2:monitor-km3
+        - docker run -d --network host -it $DOCKER_USER/pz-gr2:sensor-km3
         - docker images
-      before_deployment:
+      after_success:
         - python tests/tests.py
-
+      deploy:
+        - script:
+            - docker login -u $DOCKER_USER -p $DOCKER_PASS
+            - docker push $DOCKER_USER/pz-gr2:monitor-km3
+            - docker push $DOCKER_USER/pz-gr2:gateway-km3
+            - docker push $DOCKER_USER/pz-gr2:sensor-km3
+            - docker push $DOCKER_USER/pz-gr2:client-km3
+          on:
+            branch: km3
 
 
 notifications:
