--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "apexcharts": "^3.7.0",
     "axios": "^0.18.0",
+    "buefy": "^0.7.7",
     "chart.js": "^2.8.0",
     "laravel-mix": "^1.4.5",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.3.5",
     "vue-chartjs": "^3.4.2",
+    "vue-clock-picker": "^0.4.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vuelendar": "^1.0.0",
