--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue-clock-picker": "^0.4.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
+    "vuejs-paginator": "^2.0.2",
     "vuelendar": "^1.0.0",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
