--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,18 @@
   "dependencies": {
     "apexcharts": "^3.7.0",
     "axios": "^0.18.0",
+    "buefy": "^0.7.7",
     "chart.js": "^2.8.0",
+    "dateformat": "^3.0.3",
     "laravel-mix": "^4.0.16",
     "vue": "^2.6.6",
     "vue-apexcharts": "^1.3.5",
     "vue-chartjs": "^3.4.2",
+    "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
+    "vuejs-paginator": "^2.0.2",
+    "vuelendar": "^1.0.0",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.0"
@@ -36,6 +41,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "jest-cli": "^24.8.0",
     "jest-dom": "^3.3.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.3.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -43,7 +50,7 @@
     "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5",
-    "webpack": "^4.31.0"
+    "webpack": "^4.33.0"
   },
   "eslintConfig": {
     "root": true,
