--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ matrix:
         - docker build --tag=$DOCKER_USER/pz-gr2:monitor-km3 Monitor/
         - docker build --tag=$DOCKER_USER/pz-gr2:sensor-km3 Sensor/
         - docker build --tag=$DOCKER_USER/pz-gr2:client-km3 client/
+        - docker build --tag=$DOCKER_USER/pz-gr2:autoclient-km3 AutomaticClient/
         - docker run -d --network host -it $DOCKER_USER/pz-gr2:auth-km3
         - docker run -d --network host -it $DOCKER_USER/pz-gr2:gateway-km3
         - docker run -d --network host -it $DOCKER_USER/pz-gr2:monitor-km3
@@ -86,6 +87,7 @@ matrix:
             - docker push $DOCKER_USER/pz-gr2:gateway-km3
             - docker push $DOCKER_USER/pz-gr2:sensor-km3
             - docker push $DOCKER_USER/pz-gr2:client-km3
+            - docker push $DOCKER_USER/pz-gr2:autoclient-km3
           on:
             branch: km3
 
