--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -23,4 +23,7 @@ API_GATEWAY_URL=http://127.0.0.1:8000/v1/monitors
 
 API_ENDPOINT=http://localhost:8080/
 
-AUTH_SERVICE_URL = http://localhost:8080/v1/protected
+AUTH_SERVICE_URL = http://localhost:8080/v1/
+
+username=monitor
+pass=monitor
