--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.7.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "laravel-mix": "^4.0.16",
     "vue": "^2.6.6",
@@ -22,6 +22,7 @@
     "vue-router": "^3.0.2",
     "vuese": "^1.4.7",
     "vuetify": "^1.5.5",
+    "vuetify-datetime-picker": "^1.0.13",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
