--- a/APIGateway/makefile
+++ b/APIGateway/makefile
@@ -3,5 +3,5 @@ run:
 	rm db.sqlite3
 	python manage.py makemigrations
 	python manage.py migrate
-	python manage.py runserver 
+	python manage.py runserver 8081 
 	
