--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/vegjsokh
-spring.datasource.username=vegjsokh
-spring.datasource.password=Zp9wCQA_wU5YNeR4LoGfF4N5903IzkC1
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com:5432/gspdqqfw
+spring.datasource.username=gspdqqfw
+spring.datasource.password=UuhpK-l_1OcsROonjavXSpfXvJTkKP5_
 
 
 spring.datasource.initialization-mode=always
@@ -19,8 +19,8 @@ MONITORID=v1
 
 API_VERSION=v1
 
-API_GATEWAY_URL=http://127.0.0.1:8000/v1/monitors
+API_GATEWAY_URL=http://127.0.0.1:8081/v1/monitors
 
 API_ENDPOINT=http://localhost:8080/
 
-AUTH_SERVICE_URL = http://localhost:8080/v1/protected
+AUTH_SERVICE_URL = http://localhost:8000/v1/protected
