--- a/Monitor/src/main/resources/application.properties
+++ b/Monitor/src/main/resources/application.properties
@@ -24,8 +24,8 @@ API_GATEWAY_URL=http://127.0.0.1:8081/v1/monitors
 API_ENDPOINT=http://localhost:8080/
 
 
-AUTH_SERVICE_URL = http://localhost:8000/v1/
+AUTH_SERVICE_URL = http://127.0.0.1:8000/v1/
 
-username=monitor
+auth_username=monitor
 pass=monitor
 
